Development Portal (2020-05-12 shi)
==============================
Fix generator css chunk name


Development Portal (2020-05-06 shi)
==============================
Display recipient-country in org file document-link


Development Portal (2020-05-04 shi)
==============================
Min-width for missing dates table
Fix font for dash table column
Fix word-break for org file budget line


Development Portal (2020-04-30 shi)
==============================
Update COVID-19 search text info to include tag
Fix capital-spend percentage
Add transaction description field for COVID-19 search
Display multiple narratives in title, description,
participating-org, humanitarian-scope, tag-99,
condition, policy-marker-99


Development Portal (2020-04-26 shi)
==============================
Fix activity table margin


Development Portal (2020-04-25 shi)
==============================
Update font-size for currency in org files
Add fold for collapse of extra information in transaction tables
Adjust layout for transaction @ref


Development Portal (2020-04-22 shi)
==============================
Display vocab-uri for sectors 99 and 98


Development Portal (2020-04-21 shi)
==============================
Update length css
Move all charts to before budget
Display all charts as financial overview


Development Portal (2020-04-20 shi)
==============================
Update theme settings
Move search2 to front page
Update css
Update conditions
Fix new SAVi clashes
Update print-friendly new SAVi
Update transaction table fonts
Display narrative for non-dac sector in transaction tables
Display reference in transaction tables


Development Portal (2020-04-18 shi)
==============================
Update glossary
Hide extra filter options for now
Hide other trending buttons for now
Reposition transaction type 11 above 1
Display methodology for trending button in resulting pages (temp)


Development Portal (2020-04-17 shi)
==============================
Update more filters css