@@ -357,8 +357,7 @@ a#search_link.search_link_disable:hover	{cursor:default;}
 .search_glossary_wrap td ul li	{padding:10px 20px 10px 0;}
 .search_glossary_wrap td a:hover{text-decoration:underline;}
 
-.settings_link_search span	{color:#000; padding:10px 15px 0 0; display:inline-block;}
-.settings_link_search span:nth-of-type(1)	{font-weight:bold; padding-right:5px;}
+.settings_link_search span	{color:#000; padding:30px 0 0 0; display:inline-block;}
 .search_intro_wrap			{width:960px; margin:0 auto; margin-top:40px; color:#000; font-size:20px; line-height:26px;}
 .search_intro_wrap span,
 .search_intro_wrap a		{font-size:1.0em; color:#000; padding-right:0; font-weight:bold;}
