@@ -132,7 +132,7 @@
 #main_head_tail_settings_search
 			<td class="settings_toggle">
 				<div class="settings_link_search">
-					<span>Welcome to d-portal </span><span> – helping you explore IATI data</span>
+					<span>Search IATI data on development and humanitarian activities easily</span>
 				</div>
 			</td>
 			<td class="settings_toggle">
