@@ -32,7 +32,6 @@
 </style>
 {beige}
 {main_head_search} <!-- general.html LINE 123	-->
-{search_intro}
 {search_trend}
 {more_search_intro}
 {view_search_wrap}
@@ -62,7 +61,7 @@
 					<th class="gloss_name">Trending</th>
 					<th>Quick buttons for trending topics.
 					<div>
-						The COVID-19 search follows the <a href="https://docs.google.com/document/d/11XTnrPw8K76JvBhFfnqo-1Z9BmgqzWv2bEz9QoDrw2k">IATI Publishing Guidance</a>. It currently searches the database for COVID-19 in title and description fields and looks for the relevant codes in the humanitarian-scope element.
+						The COVID-19 search follows the <a href="https://docs.google.com/document/d/11XTnrPw8K76JvBhFfnqo-1Z9BmgqzWv2bEz9QoDrw2k">IATI Publishing Guidance</a>. It currently searches the database for COVID-19 in title, activity and transaction description fields and looks for the relevant codes in the humanitarian-scope and tag element.
 					</div>
 					</th>
 				</tr>
