@@ -1,3 +1,9 @@
+Development Portal (2020-05-15 shi)
+==============================
+Clean up landing page
+Update glossary for COVID-19 trending button
+
+
 Development Portal (2020-05-12 shi)
 ==============================
 Fix generator css chunk name
